docker/common-panel-service/nuxt-with-nginx/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: common-panel-service-webserver
  namespace: funnelbuiler-solution
  labels:
    tier: common-panel-frontend
    layer: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: common-panel-frontend
      layer: webserver
  template:
    metadata:
      labels:
        tier: common-panel-frontend
        layer: webserver
    spec:
      containers:
        - name: webserver
          imagePullPolicy: Always
          image: bdfunnelbuilder/ota-common-panel:v0.0.1
          resources:
            limits:
              cpu: "0.2"
              memory: "128M"
            requests:
              cpu: "0.2"
              memory: "128M"
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: regcred
