docker/common-panel-service/nuxt-with-nginx/service.yml
apiVersion: v1
kind: Service
metadata:
  name: common-panel-service-webserver
  namespace: funnelbuiler-solution
spec:
  selector:
    tier: common-panel-frontend
    layer: webserver
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 80
