docker/common-panel-service/nuxt-with-nginx/abc.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: common-panel-service-webserver
  namespace: funnelbuiler-solution
spec:
  ingressClassName: nginx
  rules:
    - host: "abcd.bdfunnelbuilder.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: common-panel-service-webserver
                port:
                  number: 80
